0023855: Old BOPs fail on Win7 64bit when using TBB

Minor code refactoring (readability)

Test case for issue CR23855